generated/checker-for-evaluation/generated/test-Memory-Leak-c8dafb0e4398dacc362832098a04b97da3b0395b/build_logs/6/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:90:58: error: cannot convert ‘const clang::Decl*’ to ‘const clang::DeclContext*’ in initialization
   90 |   const DeclContext *DC = C.getLocationContext()->getDecl();
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                          |
      |                                                          const clang::Decl*
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:105:20: error: ‘BindingsTy’ is not a member of ‘clang::ento::ProgramStateRef’ {aka ‘llvm::IntrusiveRefCntPtr<const clang::ento::ProgramState>’}
  105 |   ProgramStateRef::BindingsTy PendingMap = State->get<PendingReqMap>();
      |                    ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:107:18: error: ‘PendingMap’ was not declared in this scope; did you mean ‘PendingReqMap’?
  107 |   for (auto It = PendingMap.begin(), E = PendingMap.end(); It != E; ++It) {
      |                  ^~~~~~~~~~
      |                  PendingReqMap
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:107:66: error: ‘E’ was not declared in this scope
  107 |   for (auto It = PendingMap.begin(), E = PendingMap.end(); It != E; ++It) {
      |                                                                  ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:119:6: warning: ‘void {anonymous}::SAGenTestChecker::reportLeak(const clang::ento::MemRegion*, clang::ento::CheckerContext&) const’ defined but not used [-Wunused-function]
  119 | void SAGenTestChecker::reportLeak(const MemRegion *MR, CheckerContext &C) const {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
